--- a/supervisord.conf
+++ b/supervisord.conf
@@ -24,10 +24,16 @@ stdout_logfile=/var/log/supervisor/x11vnc.log
 stderr_logfile=/var/log/supervisor/x11vnc.log
 
 [program:novnc]
-command=/opt/websockify/run --web /opt/novnc 5656 localhost:5900
+command=/opt/websockify/run --web /opt/novnc 6080 localhost:5900
 autorestart=true
 stdout_logfile=/var/log/supervisor/novnc.log
 stderr_logfile=/var/log/supervisor/novnc.log
+
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
+autorestart=true
+stdout_logfile=/var/log/supervisor/nginx.log
+stderr_logfile=/var/log/supervisor/nginx.log
 
 [program:chrome]
 command=/app/chrome-launcher.sh
