--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,8 +5,9 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:xvfb]
-command=/usr/bin/Xvfb :1 -screen 0 1920x1080x24
+command=/usr/bin/Xvfb :1 -screen 0 1920x1080x24 -ac +extension GLX +render -noreset
 autorestart=true
+priority=100
 stdout_logfile=/var/log/supervisor/xvfb.log
 stderr_logfile=/var/log/supervisor/xvfb.log
 
@@ -14,24 +15,28 @@ stderr_logfile=/var/log/supervisor/xvfb.log
 command=/usr/bin/fluxbox -display :1
 autorestart=true
 environment=DISPLAY=":1"
+priority=200
 stdout_logfile=/var/log/supervisor/fluxbox.log
 stderr_logfile=/var/log/supervisor/fluxbox.log
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -display :1 -nopw -listen localhost -xkb -forever -shared
+command=/usr/bin/x11vnc -display :1 -nopw -listen localhost -xkb -forever -shared -bg -o /var/log/supervisor/x11vnc.log
 autorestart=true
+priority=300
 stdout_logfile=/var/log/supervisor/x11vnc.log
 stderr_logfile=/var/log/supervisor/x11vnc.log
 
 [program:novnc]
 command=/opt/websockify/run --web /opt/novnc 6080 localhost:5900
 autorestart=true
+priority=400
 stdout_logfile=/var/log/supervisor/novnc.log
 stderr_logfile=/var/log/supervisor/novnc.log
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
 autorestart=true
+priority=500
 stdout_logfile=/var/log/supervisor/nginx.log
 stderr_logfile=/var/log/supervisor/nginx.log
 
@@ -39,11 +44,14 @@ stderr_logfile=/var/log/supervisor/nginx.log
 command=/app/chrome-launcher.sh
 autorestart=true
 environment=DISPLAY=":1"
+priority=600
+user=chrome
 stdout_logfile=/var/log/supervisor/chrome.log
 stderr_logfile=/var/log/supervisor/chrome.log
 
 [program:file-monitor]
 command=python3 /app/file-monitor.py
 autorestart=true
+priority=700
 stdout_logfile=/var/log/supervisor/file-monitor.log
 stderr_logfile=/var/log/supervisor/file-monitor.log
